Fix style: - text align left - now scroll when overflow

--- a/PickleGamesWeb/styles/picklechat.css
+++ b/PickleGamesWeb/styles/picklechat.css
@@ -9,9 +9,9 @@
 #chat-box {
     background-color: white;
     height: 90%;
+    overflow: auto;
 
 }
-
 
 #output strong {
     color: #575ed8;
@@ -22,6 +22,7 @@
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     color: #555;
+    text-align: left;
 }
 
 #feedback p{
